--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Yasen Sotirov | Software engineer</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    👋 Hello World!
-	<script src="index.js"></script>
+    <div class="relative">
+      <h1 class="absolute text-white">👋 Hello World!</h1>
+    </div>
+    <canvas id="canvas"></canvas>
+    <script src="index.js"></script>
   </body>
 </html>
