--- a/experience.html
+++ b/experience.html
@@ -1,64 +1,82 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<link rel="stylesheet" href="style.css">
-	<title>YS Experience</title>
-	<script src="https://kit.fontawesome.com/f2f63fec08.js" crossorigin="anonymous"></script>
-    
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="stylesheet" href="style.css" />
+    <title>YS Experience</title>
+    <script
+      src="https://kit.fontawesome.com/f2f63fec08.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
-	<nav class="navbar">
-		<a href="index.html">about</a>
-		<a href="projects.html">projects</a>
-		<a href="experience.html" class="active">experience</a>
-		<hr>
-	</nav>
+  <body>
+    <nav class="navbar">
+      <a href="index.html">about</a>
+      <a href="projects.html">projects</a>
+      <a href="experience.html" class="active">experience</a>
+      <a href="contacts.html">contacts</a>
+    </nav>
 
+    <header>
+      <h1 class="title">EXPERIENCE</h1>
+    </header>
 
-	<header>
-		<div class="title">
-			<h1>EXPERIENCE</h1>	<br>
-		</div>
-	</header> <br><br>
+    <main>
+      <div class="titleDate">
+        <h3 class="projectName">Architect</h3>
+        <p class="date">08/2016 - 06/2023</p>
+      </div>
 
-
-
-	<main>
-    
-		<h3 class="projectName">Architect</h3>
-		<p class="date">08/2016 - 06/2023</p>
-
-        <p>Architectural design and building renovation.</p>	
-        <ul class="projectBullet">
-            <li>Leading a team of 5 engineers.</li>
-            <li>Fully completed projects - 43.</li>
-            <li>Mentoring 3 interns.</li>
-            <li>Weekly communication with clients.</li>
-            <li>Contribution: Implementing automated systems and processes reducing time by up to 70%.</li>
+      <div>
+        <p>Architectural design and building renovation.</p>
+        <ul>
+          <li>Leading a team of 5 engineers.</li>
+          <li>Fully completed projects - 43.</li>
+          <li>Mentoring 3 interns.</li>
+          <li>Weekly communication with clients.</li>
+          <li>
+            Contribution: Implementing automated systems and processes reducing
+            time by up to 70%.
+          </li>
         </ul>
-		<br><br>
+      </div>
 
-        <div>
-            <h2>EDUCATION</h2>
-            <hr>
+      <div>
+        <h1 class="title">EDUCATION</h1>
+      </div>
 
-            <h3 class="projectName">Architect</h3>
-            <p class="date">08/2016 - 06/2023</p>
+      <div class="titleDate">
+        <h3 class="projectName">Telerik Academy</h3>
+        <p class="date">06/2023 - 12/2023</p>
+      </div>
+      <ul>
+        <li>
+          <a target="_blank" href="assets/sertificate.jpg">show sertificate</a>
+        </li>
+        <li>
+          <a
+            target="_blank"
+            href="https://learn.telerikacademy.com/mod/customcert/verify_certificate.php?contextid=74527&code=6wyVSPKQ8M&qrcode=1"
+            >check sertificate</a
+          >
+        </li>
+      </ul>
 
-        </div>
+      <div class="titleDate">
+        <h3 class="projectName">Master's degree in Architecture</h3>
+        <p class="date">10/2004 - 02/2011</p>
+      </div>
+      <ul>
+        <li><p>New Bulgarian University</p></li>
+        <li>diploma - on demand</li>
+      </ul>
+    </main>
 
-
-	</main>
-
-	<footer></footer>
-
-</body>
-
-
+    <footer>
+      <p>v1.0</p>
+    </footer>
+  </body>
 </html>
