--- a/projects.html
+++ b/projects.html
@@ -1,72 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<link rel="stylesheet" href="style.css">
-	<title>YS Projects</title>
-	<script src="https://kit.fontawesome.com/f2f63fec08.js" crossorigin="anonymous"></script>
-    
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="stylesheet" href="style.css" />
+    <title>YS Projects</title>
+    <script
+      src="https://kit.fontawesome.com/f2f63fec08.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
-	<nav class="navbar">
-		<a href="index.html">about</a>
-		<a href="projects.html" class="active">projects</a>
-		<a href="experience.html">experience</a>
-		<hr>
-	</nav>
+  <body>
+    <nav class="navbar">
+      <a href="index.html">about</a>
+      <a href="projects.html" class="active">projects</a>
+      <a href="experience.html">experience</a>
+      <a href="contacts.html">contacts</a>
+    </nav>
 
+    <header>
+      <h1>PROJECTS</h1>
+    </header>
 
-	<header>
-		<div class="title">
-			<h1>PROJECTS</h1>	<br>
-		</div>
-	</header> <br><br>
+    <main>
+      <div class="titleDate">
+        <h3 class="title">Personal website</h3>
+        <p class="date">03/2024 - 03/2024</p>
+      </div>
 
+      <p>Simple website with four pages.</p>
+      <ul class="projectBullet">
+        <li>Technologies: HTML, CSS.</li>
+        <li>
+          <a
+            target="_blank"
+            href="https://github.com/yasen-sotirov/yasensotirov.github.io"
+            >sorce code</a
+          ><i class="fa-brands fa-github"> </i>
+        </li>
+      </ul>
 
+      <div class="titleDate">
+        <h3 class="title">Match Score</h3>
+        <p class="date">11/2023 - 12/2023</p>
+      </div>
 
-	<main>
-    
-		<h3 class="projectName">Match Score</h3>
-		<p class="date">11/2023 - 12/2023</p>
-        <p>Solution that streamline the organization and management of sport events. Implemented features for one-on-one matches and tournaments.</p>	
-        <ul class="projectBullet">
-            <li>Intensive work in a group of three with a horizontal hierarchy.</li>
-            <li>Technologies: Python, FastAPI, MariaDB, Pydantic.</li>
-            <li><a target="_blank" href="https://github.com/yasen-sotirov/Y_projects/tree/main/match_score">sorce code</a><i class="fa-brands fa-github">  </i></li>
-        </ul>
-		<br><br>
+      <p>
+        Solution that streamline the organization and management of sport
+        events. Implemented features for one-on-one matches and tournaments.
+      </p>
+      <ul class="projectBullet">
+        <li>
+          • Intensive work in a group of three with a horizontal hierarchy.
+        </li>
+        <li>• Technologies: Python, FastAPI, MariaDB, Pydantic.</li>
+        <li>
+          <a
+            target="_blank"
+            href="https://github.com/yasen-sotirov/Y_projects/tree/main/match_score"
+            >• sorce code</a
+          ><i class="fa-brands fa-github"> </i>
+        </li>
+      </ul>
 
+      <div class="titleDate">
+        <h3 class="title">Forum</h3>
+        <p class="date">10/2023 - 10/2023</p>
+      </div>
 
-		<h3 class="projectName">Forum</h3>
-		<p class="date">10/2023 - 10/2023</p>
-        <p>Design and implementation of a forum system. Providing a RESTful API for use by various clients.</p>	
-        <ul class="projectBullet">
-            <li>Intensive work in a group of three with a horizontal hierarchy.</li>
-            <li>Technologies: Python, FastAPI, Pydantic.</li>
-            <li><a target="_blank" href="https://github.com/yasen-sotirov/personal_projects/tree/main/forum_app">sorce code</a><i class="fa-brands fa-github">  </i></li>
-        </ul>
-		<br><br>
+      <p>
+        Design and implementation of a forum system. Providing a RESTfull API
+        for use by various clients.
+      </p>
+      <ul class="projectBullet">
+        <li>
+          • Intensive work in a group of three with a horizontal hierarchy.
+        </li>
+        <li>• Technologies: Python, FastAPI, Pydantic.</li>
+        <li>
+          <a
+            target="_blank"
+            href="https://github.com/yasen-sotirov/personal_projects/tree/main/forum_app"
+            >sorce code</a
+          ><i class="fa-brands fa-github"> </i>
+        </li>
+      </ul>
 
+      <div class="titleDate">
+        <h3 class="title">Logistics app</h3>
+        <p class="date">09/2023 - 09/2023</p>
+      </div>
 
-		<h3 class="projectName">Logistics application</h3>
-		<p class="date">09/2023 - 09/2023</p>
-        <p>Designed and implemented a logistics console application for efficient management of package deliveries between hubs located in various cities.</p>
-		<ul class="projectBullet">
-            <li>Intensive work in a group of three with a horizontal hierarchy.</li>
-            <li>Technologies: Python.</li>
-            <li><a target="_blank" href="https://github.com/yasen-sotirov/Y_projects/tree/main/logistic_fleet">sorce code</a><i class="fa-brands fa-github">  </i></li>
-        </ul>
-		<br><br>
+      <p>
+        Designed and implemented a logistics console application for efficient
+        management of package deliveries between hubs located in various cities.
+      </p>
+      <ul class="projectBullet">
+        <li>Intensive work in a group of three with a horizontal hierarchy.</li>
+        <li>Technologies: Python.</li>
+        <li>
+          <a
+            target="_blank"
+            href="https://github.com/yasen-sotirov/Y_projects/tree/main/logistic_fleet"
+            >sorce code</a
+          ><i class="fa-brands fa-github"> </i>
+        </li>
+      </ul>
+    </main>
 
-	</main>
-
-	<footer></footer>
-
-</body>
-
-
+    <footer>
+      <p>v1.0</p>
+    </footer>
+  </body>
 </html>
