--- a/contacts.html
+++ b/contacts.html
@@ -1,56 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css" />
-    <title>YS Experience</title>
-    <script
-      src="https://kit.fontawesome.com/f2f63fec08.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <body>
-    <nav class="navbar">
-      <a href="index.html">about</a>
-      <a href="projects.html">projects</a>
-      <a href="experience.html">experience</a>
-      <a href="contacts.html" class="active">contacts</a>
-    </nav>
+  <link rel="stylesheet" href="style.css" />
+  <title>YS Experience</title>
+  <script src="https://kit.fontawesome.com/f2f63fec08.js" crossorigin="anonymous"></script>
+</head>
 
-    <header>
-      <h1 class="title">CONTACTS</h1>
-    </header>
+<body>
+  <nav class="navbar">
+    <a href="index.html">about</a>
+    <a href="projects.html">projects</a>
+    <a href="experience.html">experience</a>
+    <a href="contacts.html" class="active">contacts</a>
+  </nav>
 
-    <main>
-      <div class="contacts">
-        <p id="tel"><i class="fa-solid fa-phone"></i> +359 886 921 385</p>
-        <p id="mail">
-          <i class="fa-solid fa-envelope"></i> ia.sotirov@gmail.com
-        </p>
-        <p>
-          <a
-            id="linkedin"
-            target="_blank"
-            href="https://www.linkedin.com/in/yasen-sotirov/"
-            ><i class="fa-brands fa-linkedin"></i> linkedin</a
-          >
-        </p>
-        <p>
-          <a id="github" target="_blank" href="https://github.com/yasen-sotirov"
-            ><i class="fa-brands fa-square-github"></i> Github</a
-          >
-        </p>
-        <p id="location">
-          <i class="fa-sharp fa-solid fa-location-dot"></i> Sofia, Bulgaria
-        </p>
-      </div>
-    </main>
+  <header>
+    <h1>CONTACTS</h1>
+  </header>
 
-    <footer>
-      <p>v1.0</p>
-    </footer>
-  </body>
+  <main>
+    <div class="contacts">
+      <p id="tel"><i class="fa-solid fa-phone"></i> +359 886 921 385</p>
+      <p id="mail">
+        <i class="fa-solid fa-envelope"></i>
+        <a href="mailto:ia.sotirov@gmail.com">ia.sotirov@gmail.com</a>
+      </p>
+      <p>
+        <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/yasen-sotirov/"><i
+            class="fa-brands fa-linkedin"></i> linkedin</a>
+      </p>
+      <p>
+        <a id="github" target="_blank" href="https://github.com/yasen-sotirov"><i
+            class="fa-brands fa-square-github"></i> Github</a>
+      </p>
+      <p id="location">
+        <i class="fa-sharp fa-solid fa-location-dot"></i> Sofia, Bulgaria
+      </p>
+    </div>
+  </main>
+
+  <footer>
+    <p>v1.0</p>
+  </footer>
+</body>
+
 </html>
