--- a/experience.html
+++ b/experience.html
@@ -21,58 +21,73 @@
     </nav>
 
     <header>
-      <h1 class="title">EXPERIENCE</h1>
+      <h1>EXPERIENCE</h1>
     </header>
 
     <main>
-      <div class="titleDate">
-        <h3 class="projectName">Architect</h3>
-        <p class="date">08/2016 - 06/2023</p>
+      <div class="section-container">
+        <div class="title-with-date">
+          <h3>Architect</h3>
+          <span>08/2016 - 06/2023</span>
+        </div>
+        <div>
+          <p>Architectural design and building renovation.</p>
+          <ul>
+            <li>Leading a team of 5 engineers.</li>
+            <li>Fully completed projects - 43.</li>
+            <li>Mentoring 3 interns.</li>
+            <li>Weekly communication with clients.</li>
+            <li>
+              Contribution: Implementing automated systems and processes
+              reducing time by up to 70%.
+            </li>
+          </ul>
+        </div>
       </div>
 
       <div>
-        <p>Architectural design and building renovation.</p>
+        <h2>EDUCATION</h2>
+      </div>
+
+      <div class="section-container">
+        <div class="title-with-date">
+          <h3>Telerik Academy</h3>
+          <span>06/2023 - 12/2023</span>
+        </div>
+
         <ul>
-          <li>Leading a team of 5 engineers.</li>
-          <li>Fully completed projects - 43.</li>
-          <li>Mentoring 3 interns.</li>
-          <li>Weekly communication with clients.</li>
           <li>
-            Contribution: Implementing automated systems and processes reducing
-            time by up to 70%.
+            <a target="_blank" href="assets/sertificate.jpg"
+              >show sertificate</a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://learn.telerikacademy.com/mod/customcert/verify_certificate.php?contextid=74527&code=6wyVSPKQ8M&qrcode=1"
+            >
+              check sertificate
+            </a>
           </li>
         </ul>
       </div>
 
-      <div>
-        <h1 class="title">EDUCATION</h1>
+      <div class="section-container">
+        <div class="title-with-date">
+          <h3 class="projectName">Master's degree in Architecture</h3>
+          <p class="date">10/2004 - 02/2011</p>
+        </div>
+        <ul>
+          <li>
+            <p>New Bulgarian University</p>
+          </li>
+          <li>diploma - on demand</li>
+        </ul>
       </div>
 
-      <div class="titleDate">
-        <h3 class="projectName">Telerik Academy</h3>
-        <p class="date">06/2023 - 12/2023</p>
+      <div class="cv-container">
+        <a href="assets/CV.pdf" target="_blank">Download CV as pdf</a>
       </div>
-      <ul>
-        <li>
-          <a target="_blank" href="assets/sertificate.jpg">show sertificate</a>
-        </li>
-        <li>
-          <a
-            target="_blank"
-            href="https://learn.telerikacademy.com/mod/customcert/verify_certificate.php?contextid=74527&code=6wyVSPKQ8M&qrcode=1"
-            >check sertificate</a
-          >
-        </li>
-      </ul>
-
-      <div class="titleDate">
-        <h3 class="projectName">Master's degree in Architecture</h3>
-        <p class="date">10/2004 - 02/2011</p>
-      </div>
-      <ul>
-        <li><p>New Bulgarian University</p></li>
-        <li>diploma - on demand</li>
-      </ul>
     </main>
 
     <footer>
