--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="style.css" />
-    <title>YS Experience</title>
+    <title>Yasen Sotirov contacts and connections</title>
     <script
       src="https://kit.fontawesome.com/f2f63fec08.js"
       crossorigin="anonymous"
@@ -21,25 +21,35 @@
     </nav>
 
     <header>
-      <h1 class="title">CONTACTS</h1>
+      <h1>CONTACTS</h1>
     </header>
 
     <main>
       <div class="contacts">
         <p id="tel"><i class="fa-solid fa-phone"></i> +359 886 921 385</p>
         <p id="mail">
-          <i class="fa-solid fa-envelope"></i> ia.sotirov@gmail.com
+          <i class="fa-solid fa-envelope"></i>
+          <a
+            title="mail to: ia.sotirov@gmail.com"
+            href="mailto:ia.sotirov@gmail.com"
+            >ia.sotirov@gmail.com</a
+          >
         </p>
         <p>
           <a
             id="linkedin"
+            title="Visit my LinkedIn profile"
             target="_blank"
             href="https://www.linkedin.com/in/yasen-sotirov/"
             ><i class="fa-brands fa-linkedin"></i> linkedin</a
           >
         </p>
         <p>
-          <a id="github" target="_blank" href="https://github.com/yasen-sotirov"
+          <a
+            id="github"
+            target="_blank"
+            title="Visit my GitHub profile"
+            href="https://github.com/yasen-sotirov"
             ><i class="fa-brands fa-square-github"></i> Github</a
           >
         </p>
