--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-      <!-- Simple game -->
+      <!-- Guess the number -->
       <div class="section-container">
         <div class="title-with-date">
           <h3>Simple game: Guess the number</h3>
