--- a/experience.html
+++ b/experience.html
@@ -75,7 +75,7 @@
         <ul class="ul-bullet">
           <li>
             <a target="_blank" href="assets/sertificate.jpg"
-              >show sertificate</a
+              >show certificate</a
             >
           </li>
           <li>
@@ -83,7 +83,7 @@
               target="_blank"
               href="https://learn.telerikacademy.com/mod/customcert/verify_certificate.php?contextid=74527&code=6wyVSPKQ8M&qrcode=1"
             >
-              check sertificate
+              check certificate
             </a>
           </li>
         </ul>
