--- a/contacts.html
+++ b/contacts.html
@@ -36,21 +36,23 @@
           >
         </p>
         <p>
+          <i class="fa-brands fa-linkedin"></i>
           <a
             id="linkedin"
             title="Visit my LinkedIn profile"
             target="_blank"
             href="https://www.linkedin.com/in/yasen-sotirov/"
-            ><i class="fa-brands fa-linkedin"></i> linkedin</a
+            >linkedin</a
           >
         </p>
         <p>
+          <i class="fa-brands fa-square-github"></i> 	
           <a
             id="github"
             target="_blank"
             title="Visit my GitHub profile"
             href="https://github.com/yasen-sotirov"
-            ><i class="fa-brands fa-square-github"></i> Github</a
+            >Github</a
           >
         </p>
         <p id="location">
