--- a/index.html
+++ b/index.html
@@ -43,61 +43,92 @@
         </div>
 
         <ul class="skill-list">
-          <li>
+
+          <!-- PYTHON -->
+          <li class="skill">
             <div class="skill-name">Python</div>
-            <div class="loading">
-              <div style="width: 80%"></div>
-            </div>
+            <ul class="skill-description">
+              <li>CORE: variables, scope, functions, loop, linear data structures, 
+                conditional, debugging, errors handling, file handling;</li> 
+              <li>DSA: linked list, hash table, stack, queue, tree, complexity, 
+                searching and sorting algorithms, recursion;</li>     
+              <li>OOP: class, object, methods, comprehensions, lambda, inheritance, 
+                encapsulation, polymorphism, composition, SOLID, data hiding;</li>
+              <li>WEB: API, database, SQL, MVC, authentication, authorization, dependency 
+                injection;</li>
+            </ul>
           </li>
 
-          <li>
+          <!-- JAVASCRIPT -->
+          <li class="skill">
             <div class="skill-name">JavaScript</div>
-            <div class="loading">
-              <div style="width: 32%"></div>
-            </div>
+            <ul class="skill-description">
+              <li>CORE: variables, data types, operators, conditionals, scope, loops, functions, 
+                common methods, scope, DOM manipulation, event handling, basic debugging;</li>
+            </ul>
           </li>
 
-          <li>
+          <!-- HTML -->
+          <li class="skill">
             <div class="skill-name">HTML</div>
-            <div class="loading">
-              <div style="width: 43%"></div>
-            </div>
+            <ul class="skill-description">
+              <li>BASICS:	structure, tags, attributes, lists (+ nested), tables, 
+                forms, basics meta tags;</li>
+            </ul>
           </li>
 
-          <li>
+          <!-- CSS -->
+          <li class="skill">
             <div class="skill-name">CSS</div>
-            <div class="loading">
-              <div style="width: 43%"></div>
-            </div>
+            <ul class="skill-description">
+              <li>BASICS:	selectors, properties, box model, styling text, 
+                basic layout, simple transitions;</li>
+              <li>INTERMEDIATE: pseudo-classes/elements, positioning, flexbox;</li>
+            </ul>
           </li>
 
-          <li>
+          <!-- TAILWIND -->
+          <li class="skill">
+            <div class="skill-name">TailwindCSS</div>
+            <ul class="skill-description">
+              <li>BASICS:	basic utility classes, responsive design, pseudo-classes, 
+                html styling, flexbox;</li>
+            </ul>
+          </li>
+
+          <!-- FASTAPI -->
+          <li class="skill">
             <div class="skill-name">
-              <a href="https://fastapi.tiangolo.com/" target="_blank"
-                >FastAPI</a
-              >
+              <a href="https://fastapi.tiangolo.com/" target="_blank">FastAPI</a>
             </div>
-            <div class="loading">
-              <div style="width: 55%"></div>
-            </div>
+            <ul class="skill-description">
+              <li>BASICS:	structure, basic routing (path query), request / response models 
+                pydantic, HTTP methods;</li>
+            </ul>
           </li>
 
-          <li>
+          <!-- MARIA DB -->
+          <li class="skill">
             <div class="skill-name">MariaDB</div>
-            <div class="loading">
-              <div class="level" style="width: 43%"></div>
-            </div>
+            <ul class="skill-description">
+              <li>BASICS:	basic SQL commands/querying (incl. join, union), data types, creating and managing 
+                databases/tables, relations;</li>
+            </ul>            
           </li>
 
-          <li>
+          <!-- POSTGRESQL -->
+          <li class="skill">
             <div class="skill-name">PostgreSQL</div>
-            <div class="loading">
-              <div class="level" style="width: 38%"></div>
-            </div>
+            <ul class="skill-description">
+              <li>BASICS:	basic SQL commands/querying (incl. join, union), data types, creating and managing 
+                databases/tables, relations, functions;</li>
+            </ul>
+            
           </li>
         </ul>
       </div>
 
+      <!-- LANGUAGES -->
       <div class="section-container">
         <div class="title-with-date">
           <h3>LANGUAGES</h3>
@@ -109,6 +140,6 @@
       </div>
     </main>
 
-    <footer>v1.0</footer>
+    <footer>v1.1</footer>
   </body>
 </html>
