add new skill: Linux

--- a/index.html
+++ b/index.html
@@ -43,19 +43,27 @@
         </div>
 
         <ul class="skill-list">
-
           <!-- PYTHON -->
           <li class="skill">
             <div class="skill-name">Python</div>
             <ul class="skill-description">
-              <li>CORE: variables, scope, functions, loop, linear data structures, 
-                conditional, debugging, errors handling, file handling;</li> 
-              <li>DSA: linked list, hash table, stack, queue, tree, complexity, 
-                searching and sorting algorithms, recursion;</li>     
-              <li>OOP: class, object, methods, comprehensions, lambda, inheritance, 
-                encapsulation, polymorphism, composition, SOLID, data hiding;</li>
-              <li>WEB: API, database, SQL, MVC, authentication, authorization, dependency 
-                injection;</li>
+              <li>
+                CORE: variables, scope, functions, loop, linear data structures,
+                conditional, debugging, errors handling, file handling;
+              </li>
+              <li>
+                DSA: linked list, hash table, stack, queue, tree, complexity,
+                searching and sorting algorithms, recursion;
+              </li>
+              <li>
+                OOP: class, object, methods, comprehensions, lambda,
+                inheritance, encapsulation, polymorphism, composition, SOLID,
+                data hiding;
+              </li>
+              <li>
+                WEB: API, database, SQL, MVC, authentication, authorization,
+                dependency injection;
+              </li>
             </ul>
           </li>
 
@@ -63,8 +71,11 @@
           <li class="skill">
             <div class="skill-name">JavaScript</div>
             <ul class="skill-description">
-              <li>CORE: variables, data types, operators, conditionals, scope, loops, functions, 
-                common methods, scope, DOM manipulation, event handling, basic debugging;</li>
+              <li>
+                CORE: variables, data types, operators, conditionals, scope,
+                loops, functions, common methods, scope, DOM manipulation, event
+                handling, basic debugging;
+              </li>
             </ul>
           </li>
 
@@ -72,8 +83,10 @@
           <li class="skill">
             <div class="skill-name">HTML</div>
             <ul class="skill-description">
-              <li>BASICS:	structure, tags, attributes, lists (+ nested), tables, 
-                forms, basics meta tags;</li>
+              <li>
+                BASICS: structure, tags, attributes, lists (+ nested), tables,
+                forms, basics meta tags;
+              </li>
             </ul>
           </li>
 
@@ -81,9 +94,13 @@
           <li class="skill">
             <div class="skill-name">CSS</div>
             <ul class="skill-description">
-              <li>BASICS:	selectors, properties, box model, styling text, 
-                basic layout, simple transitions;</li>
-              <li>INTERMEDIATE: pseudo-classes/elements, positioning, flexbox;</li>
+              <li>
+                BASICS: selectors, properties, box model, styling text, basic
+                layout, simple transitions;
+              </li>
+              <li>
+                INTERMEDIATE: pseudo-classes/elements, positioning, flexbox;
+              </li>
             </ul>
           </li>
 
@@ -91,19 +108,25 @@
           <li class="skill">
             <div class="skill-name">TailwindCSS</div>
             <ul class="skill-description">
-              <li>BASICS:	basic utility classes, responsive design, pseudo-classes, 
-                html styling, flexbox;</li>
+              <li>
+                BASICS: basic utility classes, responsive design,
+                pseudo-classes, html styling, flexbox;
+              </li>
             </ul>
           </li>
 
           <!-- FASTAPI -->
           <li class="skill">
             <div class="skill-name">
-              <a href="https://fastapi.tiangolo.com/" target="_blank">FastAPI</a>
+              <a href="https://fastapi.tiangolo.com/" target="_blank"
+                >FastAPI</a
+              >
             </div>
             <ul class="skill-description">
-              <li>BASICS:	structure, basic routing (path query), request / response models 
-                pydantic, HTTP methods;</li>
+              <li>
+                BASICS: structure, basic routing (path query), request /
+                response models pydantic, HTTP methods;
+              </li>
             </ul>
           </li>
 
@@ -111,19 +134,31 @@
           <li class="skill">
             <div class="skill-name">MariaDB</div>
             <ul class="skill-description">
-              <li>BASICS:	basic SQL commands/querying (incl. join, union), data types, creating and managing 
-                databases/tables, relations;</li>
-            </ul>            
+              <li>
+                BASICS: basic SQL commands/querying (incl. join, union), data
+                types, creating and managing databases/tables, relations;
+              </li>
+            </ul>
           </li>
 
           <!-- POSTGRESQL -->
           <li class="skill">
             <div class="skill-name">PostgreSQL</div>
             <ul class="skill-description">
-              <li>BASICS:	basic SQL commands/querying (incl. join, union), data types, creating and managing 
-                databases/tables, relations, functions;</li>
+              <li>
+                BASICS: basic SQL commands/querying (incl. join, union), data
+                types, creating and managing databases/tables, relations,
+                functions;
+              </li>
             </ul>
-            
+          </li>
+
+          <!-- LINUX -->
+          <li class="skill">
+            <div class="skill-name">Linux</div>
+            <ul class="skill-description">
+              <li>My personal computer runs on Ubuntu Linux;</li>
+            </ul>
           </li>
         </ul>
       </div>
